[package]
name = "remote-utils"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
# keystone-engine = { version = "0.1.0", features = ["build-from-src"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winbase", "errhandlingapi", "minwindef", "handleapi", "memoryapi", "processthreadsapi", "psapi", "synchapi", "tlhelp32", "winuser"] }

[target.'cfg(unix)'.dependencies]
syscalls = { version = "0.6.9" }
rustix = { version = "0.37.11", features = ["mm"]}
proc-maps = { version = "0.3.0" }